tests/invalid/invalid-024.inox
Module Invalid024

Log() :
    Return "abc"
;

Main() :
;
